--- a/02_Dense_Vector_Retrieval/Pythonic_RAG_Assignment.ipynb
+++ b/02_Dense_Vector_Retrieval/Pythonic_RAG_Assignment.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "id": "Z1dyrG4hR6yt"
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -130,7 +130,18 @@
     "id": "Ia2sUEuGR6yu",
     "outputId": "84937ecc-c35f-4c4a-a4ab-9da72625954c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_loader = TextFileLoader(\"data/HealthWellnessGuide.txt\")\n",
     "documents = text_loader.load_documents()\n",
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -152,16 +163,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The Personal Wellness Guide\n",
+      "A Comprehensive Resource for Health and Well-being\n",
       "\n",
-      "The Pmarca Blog Archives\n",
-      "(select posts from 2007-2009)\n",
-      "Marc Andreessen\n",
-      "copyright: Andreessen Horow\n"
+      "PART 1: EXERCISE AND MOVEMENT\n",
+      "\n",
+      "Chapter 1: Understanding Exercise Basics\n",
+      "\n",
+      "Exercise is one of the most important things yo\n"
      ]
     }
    ],
    "source": [
-    "print(documents[0][:100])"
+    "print(documents[0][:200])"
    ]
   },
   {
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -210,10 +224,10 @@
     {
      "data": {
       "text/plain": [
-       "373"
+       "21"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "['\\ufeff\\nThe Pmarca Blog Archives\\n(select posts from 2007-2009)\\nMarc Andreessen\\ncopyright: Andreessen Horowitz\\ncover design: Jessica Hagy\\nproduced using: Pressbooks\\nContents\\nTHE PMARCA GUIDE TO STARTUPS\\nPart 1: Why not to do a startup 2\\nPart 2: When the VCs say \"no\" 10\\nPart 3: \"But I don\\'t know any VCs!\" 18\\nPart 4: The only thing that matters 25\\nPart 5: The Moby Dick theory of big companies 33\\nPart 6: How much funding is too little? Too much? 41\\nPart 7: Why a startup\\'s initial business plan doesn\\'t\\nmatter that much\\n49\\nTHE PMARCA GUIDE TO HIRING\\nPart 8: Hiring, managing, promoting, and Dring\\nexecutives\\n54\\nPart 9: How to hire a professional CEO 68\\nHow to hire the best people you\\'ve ever worked\\nwith\\n69\\nTHE PMARCA GUIDE TO BIG COMPANIES\\nPart 1: Turnaround! 82\\nPart 2: Retaining great people 86\\nTHE PMARCA GUIDE TO CAREER, PRODUCTIVITY,\\nAND SOME OTHER THINGS\\nIntroduction 97\\nPart 1: Opportunity 99\\nPart 2: Skills and education 107\\nPart 3: Where to go and why 120\\nThe Pmarca Guide to Personal Productivi']"
+       "['The Personal Wellness Guide\\nA Comprehensive Resource for Health and Well-being\\n\\nPART 1: EXERCISE AND MOVEMENT\\n\\nChapter 1: Understanding Exercise Basics\\n\\nExercise is one of the most important things you can do for your health. Regular physical activity can improve your brain health, help manage weight, reduce the risk of disease, strengthen bones and muscles, and improve your ability to do everyday activities.\\n\\nThe four main types of exercise are aerobic (cardio), strength training, flexibility, and balance exercises. A well-rounded fitness routine includes all four types. Adults should aim for at least 150 minutes of moderate-intensity aerobic activity per week, along with muscle-strengthening activities on 2 or more days per week.\\n\\nChapter 2: Exercises for Common Problems\\n\\nLower Back Pain Relief\\nLower back pain affects approximately 80% of adults at some point in their lives. Gentle stretching and strengthening exercises can help alleviate discomfort and prevent future episodes.\\n\\nReco']"
       ]
      },
      "execution_count": 6,
@@ -352,8 +366,9 @@
    "metadata": {},
    "source": [
     "##### ✅ Answer:\n",
-    "1.\n",
-    "2."
+    "1.You can’t change it at training time, but you can truncate the embedding vector (e.g. use the first 256 or 512 dimensions) when storing or when querying.\n",
+    "\n",
+    "2.They use Matryoshka Representation Learning, which in my understanding means that the most important meaning is to be stored first in the vector. So the first part already makes sense on its own, and the rest just adds extra detail. In regular embeddings meaning is spread evenly, so truncating breaks meaning, but with Matryoshka you would get first dimension \"this is about Nepal\", later dimension would be \"altitude, peaks, gear etc\". This way we can query with short prefixes first, then use longer ones if we need more precision. "
    ]
   },
   {
@@ -393,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "id": "O4KoLbVDR6yv"
    },
@@ -420,7 +435,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ✅ Answer:\n"
+    "##### ✅ Answer:\n",
+    "Async allows to collect our embeddings in parallel rather than one by one, which makes the process much faster. Since embedding calls are network-bound, async keeps the app busy while waiting, improves throughput, respects rate limits more easily, and scales much better for large document sets. "
    ]
   },
   {
@@ -462,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -470,9 +486,29 @@
     "id": "76d96uavR6yw",
     "outputId": "bbfccc31-20a2-41c7-c14d-46554a43ed2d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(' Relief\\nLower back pain affects approximately 80% of adults at some point in their lives. Gentle stretching and strengthening exercises can help alleviate discomfort and prevent future episodes.\\n\\nRecommended exercises for lower back pain include:\\n- Cat-Cow Stretch: Start on hands and knees, alternate between arching your back up (cat) and letting it sag down (cow). Do 10-15 repetitions.\\n- Bird Dog: From hands and knees, extend opposite arm and leg while keeping your core engaged. Hold for 5 seconds, then switch sides. Do 10 repetitions per side.\\n- Partial Crunches: Lie on your back with knees bent, cross arms over chest, tighten stomach muscles and raise shoulders off floor. Hold briefly, then lower. Do 8-12 repetitions.\\n- Knee-to-Chest Stretch: Lie on your back, pull one knee toward your chest while keeping the other foot flat. Hold for 15-30 seconds, then switch legs.\\n- Pelvic Tilts: Lie on your back with knees bent, flatten your back against the floor by tightening abs and tilting p',\n",
+       "  np.float64(0.7477605848567521)),\n",
+       " ('The Personal Wellness Guide\\nA Comprehensive Resource for Health and Well-being\\n\\nPART 1: EXERCISE AND MOVEMENT\\n\\nChapter 1: Understanding Exercise Basics\\n\\nExercise is one of the most important things you can do for your health. Regular physical activity can improve your brain health, help manage weight, reduce the risk of disease, strengthen bones and muscles, and improve your ability to do everyday activities.\\n\\nThe four main types of exercise are aerobic (cardio), strength training, flexibility, and balance exercises. A well-rounded fitness routine includes all four types. Adults should aim for at least 150 minutes of moderate-intensity aerobic activity per week, along with muscle-strengthening activities on 2 or more days per week.\\n\\nChapter 2: Exercises for Common Problems\\n\\nLower Back Pain Relief\\nLower back pain affects approximately 80% of adults at some point in their lives. Gentle stretching and strengthening exercises can help alleviate discomfort and prevent future episodes.\\n\\nReco',\n",
+       "  np.float64(0.45619582608343445)),\n",
+       " ('chest while keeping the other foot flat. Hold for 15-30 seconds, then switch legs.\\n- Pelvic Tilts: Lie on your back with knees bent, flatten your back against the floor by tightening abs and tilting pelvis up slightly. Hold for 10 seconds, repeat 8-12 times.\\n\\nNeck and Shoulder Tension\\nDesk work and poor posture often lead to neck and shoulder tension. These exercises can provide relief:\\n- Neck Rolls: Slowly roll your head in a circle, 5 times in each direction.\\n- Shoulder Shrugs: Raise shoulders toward ears, hold for 5 seconds, then release. Repeat 10 times.\\n- Chest Opener: Clasp hands behind back, squeeze shoulder blades together, and lift arms slightly. Hold for 15-30 seconds.\\n- Chin Tucks: While sitting or standing tall, pull your chin back to create a \"double chin.\" Hold for 5 seconds, repeat 10 times.\\n\\nChapter 3: Building a Workout Routine\\n\\nStarting a new exercise routine can feel overwhelming. The key is to start slowly and gradually increase intensity and duration over time.\\n\\nBe',\n",
+       "  np.float64(0.4352447171893437)),\n",
+       " (\"ke at a consistent time\\n- Drink a glass of water immediately\\n- 5-10 minutes of stretching or light movement\\n- Healthy breakfast\\n- Brief mindfulness practice or journaling\\n- Review goals and priorities for the day\\n\\nAvoid these morning habits:\\n- Checking phone immediately upon waking\\n- Skipping breakfast\\n- Hitting snooze multiple times\\n- Rushing without preparation\\n- Starting with negative news\\n\\nChapter 15: Evening Wind-Down Routines\\n\\nA consistent evening routine signals to your body that it's time to prepare for sleep.\\n\\nEffective evening routine elements:\\n- Set a consistent bedtime\\n- Dim lights 1-2 hours before sleep\\n- Put away electronic devices\\n- Light stretching or yoga\\n- Warm bath or shower\\n- Reading (paper book preferred)\\n- Journaling or gratitude practice\\n- Relaxation exercises\\n\\nPART 6: COMMON HEALTH CONCERNS\\n\\nChapter 16: Managing Headaches Naturally\\n\\nHeadaches are one of the most common health complaints. Understanding triggers and natural remedies can help manage them effectivel\",\n",
+       "  np.float64(0.27781201288416296)),\n",
+       " (\"Insomnia (CBT-I)\\n- Relaxation techniques like progressive muscle relaxation\\n- Herbal teas such as chamomile or valerian root\\n- Magnesium supplements (consult healthcare provider first)\\n- Meditation and deep breathing exercises\\n\\nPART 4: STRESS MANAGEMENT AND MENTAL WELLNESS\\n\\nChapter 10: Understanding Stress\\n\\nStress is the body's response to any demand or threat. While some stress can be beneficial (motivating us to meet deadlines), chronic stress can harm physical and mental health.\\n\\nPhysical symptoms of stress:\\n- Headaches and muscle tension\\n- Fatigue\\n- Sleep problems\\n- Digestive issues\\n- Rapid heartbeat\\n\\nMental symptoms of stress:\\n- Anxiety and worry\\n- Difficulty concentrating\\n- Irritability\\n- Feeling overwhelmed\\n- Depression\\n\\nChapter 11: Stress Reduction Techniques\\n\\nEffective stress management involves both immediate relief techniques and long-term lifestyle changes.\\n\\nImmediate stress relief:\\n- Deep breathing: Inhale for 4 counts, hold for 4, exhale for 4\\n- Progressive muscle relaxat\",\n",
+       "  np.float64(0.27016761629893327))]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vector_db.search_by_text(\"What exercises help with lower back pain?\", k=3)"
+    "vector_db.search_by_text(\"What exercises help with lower back pain?\", k=5)"
    ]
   },
   {
@@ -672,7 +708,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ✅ Answer:\n"
+    "##### ✅ Answer:\n",
+    "\n",
+    "Almost, we can aim for \"mostly\" reproducible outputs by keeping everything identical like model, prompt/messages, temperature/top_p, tools. OpenAI also has a beta seed parameter that makes sampling deterministic, so repeated requests with the same seed and inputs should return the same result, but it’s not 100% guaranteed."
    ]
   },
   {
@@ -688,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "id": "WIfpIot7R6yw"
    },
@@ -713,7 +751,7 @@
     "messages = [\n",
     "    system_role_prompt.create_message(expertise=\"Python\"),\n",
     "    user_role_prompt.create_message(\n",
-    "        content=\"What is the best way to write a loop?\"\n",
+    "        content=\"What is the best way to write a recursive function?\"\n",
     "    ),\n",
     "]\n",
     "\n",
@@ -722,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -735,25 +773,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! The best way to write a loop in Python depends on what you want to achieve, but generally, Python’s `for` loop is very elegant and readable, especially when iterating over sequences like lists, tuples, or ranges.\n",
+      "Hello! I'd be happy to help you with writing recursive functions in Python.\n",
       "\n",
-      "Here’s a simple example of a `for` loop that prints numbers from 0 to 4:\n",
+      "The best way to write a recursive function typically involves these key steps:\n",
+      "\n",
+      "1. **Base Case**: Define a simple scenario where the function returns a result without calling itself. This prevents infinite recursion.\n",
+      "2. **Recursive Case**: Break the problem into smaller subproblems and call the same function to solve those.\n",
+      "3. **Combine Results**: Use the results of the recursive calls to build the final answer.\n",
+      "\n",
+      "Here’s a clear example with the classic factorial function:\n",
       "\n",
       "```python\n",
-      "for i in range(5):\n",
-      "    print(i)\n",
+      "def factorial(n):\n",
+      "    # Base case: factorial of 0 or 1 is 1\n",
+      "    if n == 0 or n == 1:\n",
+      "        return 1\n",
+      "    # Recursive case: n! = n * (n-1)!\n",
+      "    else:\n",
+      "        return n * factorial(n - 1)\n",
+      "\n",
+      "print(factorial(5))  # Output: 120\n",
       "```\n",
       "\n",
-      "If you need a loop that runs until some condition is met, a `while` loop is more appropriate:\n",
+      "**Tips for writing recursive functions:**\n",
       "\n",
-      "```python\n",
-      "count = 0\n",
-      "while count < 5:\n",
-      "    print(count)\n",
-      "    count += 1\n",
-      "```\n",
+      "- Always ensure you have a base case.\n",
+      "- Make sure each recursive call moves towards the base case.\n",
+      "- Be cautious with input values; for example, consider handling negative numbers or unexpected input.\n",
+      "- If the recursion depth might be large, consider iterative solutions or Python's `sys.setrecursionlimit()` carefully.\n",
+      "- Sometimes, using memoization or caching results can optimize recursive functions.\n",
       "\n",
-      "If you have something specific in mind or want advice on a particular type of loop, feel free to share more details! I’m here to help. 😊\n"
+      "If you'd like, I can help you write a recursive function for a specific problem you're working on! Just let me know. 😊\n"
      ]
     }
    ],
@@ -776,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "D1hamzGaR6yy"
    },
@@ -831,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,9 +935,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response: Based on the provided information, some natural remedies for improving sleep quality include:\n",
+      "\n",
+      "1. Cognitive Behavioral Therapy for Insomnia (CBT-I) — a therapy approach specifically designed to help with insomnia (Source 1).\n",
+      "\n",
+      "2. Relaxation techniques — such as progressive muscle relaxation and meditation, which help calm the body and mind before sleep (Source 1 and Source 3).\n",
+      "\n",
+      "3. Herbal teas — like chamomile or valerian root, known for their calming properties (Source 1).\n",
+      "\n",
+      "4. Magnesium supplements — though you should consult a healthcare provider before using these (Source 1).\n",
+      "\n",
+      "Additionally, good sleep hygiene practices that support natural sleep include:\n",
+      "\n",
+      "- Avoiding caffeine after 2 PM (Sources 1, 2, and 3).\n",
+      "- Exercising regularly, but not too close to bedtime (Sources 1 and 2).\n",
+      "- Limiting alcohol and heavy meals before bed (Source 1 and 2).\n",
+      "- Maintaining a consistent sleep schedule and relaxing bedtime routine such as reading or gentle stretching (Sources 2 and 3).\n",
+      "- Creating an optimal sleep environment: keeping the room temperature between 65-68°F, using blackout curtains or a sleep mask to ensure darkness, and using comfortable mattresses and pillows (Sources 1, 2, and 3).\n",
+      "\n",
+      "These strategies collectively promote better quality sleep and help manage issues like insomnia.\n",
+      "\n",
+      "Please remember to consult with a healthcare professional before starting any new treatment or supplement for sleep concerns.\n",
+      "\n",
+      "Context Count: 3\n",
+      "Similarity Scores: ['Source 1: 0.553', 'Source 2: 0.521', 'Source 3: 0.438']\n"
+     ]
+    }
+   ],
    "source": [
     "rag_pipeline = RetrievalAugmentedQAPipeline(\n",
     "    vector_db_retriever=vector_db,\n",
@@ -928,7 +1009,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ✅ Answer:\n"
+    "##### ✅ Answer:\n",
+    "current one is Chain of Thought and we are also using role based prompting, I also like the sound of multi-step decomposition approach, which would break complex questions into sub-questions and reflection/verification prompting where model reviews it's answer, ie \"After providing your answer, review it for completeness and accuracy\". "
    ]
   },
   {
@@ -985,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.12"
   },
   "orig_nbformat": 4
  },
